# backendProg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: client.c  client.py  server.c  server.py
include/: archive_loader.h  common.h  curl_utils.h  database.h  gui.h  heatmap_generator.h  map_renderer.h  math_osm.h  startup.h  telemetry.h  telephony_parser.h  tile_manager.h  zmq_server.h
src/: archive_loader.cpp  curl_utils.cpp  database.cpp  gui.cpp  heatmap_generator.cpp  main.cpp  map_renderer.cpp  math_osm.cpp  startup.cpp  telemetry.cpp  telephony_parser.cpp  tile_manager.cpp  zmq_server.cpp
